recipes/spicypork.html

--- a/recipes/spicypork.html
+++ b/recipes/spicypork.html
@@ -13,20 +13,20 @@
 
         <h3>Ingredients</h3>
             <ul>
-                <p>2 tablespoons hot chili paste(you can use sambal oelek, but sriracha can also work)</p>
-                <p>2 tablespoons soy sauce</p>
-                <p>2 tablespoons brown sugar</p>
-                <p>11-inch piece of ginger, peeled and finely grated</p>
-                <p>1 garlic clove, finely grated</p>
-                <p>1 1/2 pounds pork tenderloin, very thinly sliced</p>
+                <li>2 tablespoons hot chili paste(you can use sambal oelek, but sriracha can also work)</li>
+                <li>2 tablespoons soy sauce</li>
+                <li>2 tablespoons brown sugar</li>
+                <li>11-inch piece of ginger, peeled and finely grated</li>
+                <li>1 garlic clove, finely grated</li>
+                <li>1 1/2 pounds pork tenderloin, very thinly sliced</li>
             </ul>
 
             <h3>Steps</h3>
             <ol>
-                <p>1. Shake all the sauce ingredients in a jar. Pour the sauce over the pork and allow it to rest for 20minutes - 1 hour.</p>
-                <p>2. Heat a good searing skillet(such as cast iron) over high heat. Add just a little bit of vcegetable oil.</p>
-                <p>3. When the oil is hot and shiny, add the pork in a single layer(you may need to do this in batches). Cook, undisturbed, for 1-2 minutes until you are getting that nice cararmelized look. Flip and repeat to finish.</p>
-                <p>4. That's it! Enjoy your flavortown masterpiece.</p>
+                <li>Shake all the sauce ingredients in a jar. Pour the sauce over the pork and allow it to rest for 20minutes - 1 hour.</li>
+                <li>Heat a good searing skillet(such as cast iron) over high heat. Add just a little bit of vcegetable oil.</li>
+                <li>When the oil is hot and shiny, add the pork in a single layer(you may need to do this in batches). Cook, undisturbed, for 1-2 minutes until you are getting that nice cararmelized look. Flip and repeat to finish.</li>
+                <li>That's it! Enjoy your flavortown masterpiece.</li>
             </ol>
     </body>
 </html>
