--- a/recipes/spicypork.html
+++ b/recipes/spicypork.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>Spicy Pork</title>
     </head>
 
     <body>
