--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="../odin-recipes/recipes/spicypork.html">Recipe</a>
+        <ul>
+            <a href="../odin-recipes/recipes/spicypork.html">Spicy Pork</a>
+            <a href=""></a>
+        </ul>
     </body>
 </html>
