--- a/recipes/cheesescones.html
+++ b/recipes/cheesescones.html
@@ -1,9 +1,28 @@
 <DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Cheese Scones</title>
 </head>
+
 <body>
+    <h1>Cheese Scones</h1>
+    <img src="../cheesescones.jpg">
+    <h2>Family favourites</h2>
+    <p>These scones are a Edmonds and kiwi staple!</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>3 cups Edmonds statndard grade flour</li>
+        <li>3 tsp Edmonds baking powder</li>
+        <li>3/4 cup grated cheese</li>
+        <li>1/4 tsp salt</li>
+        <li>75g butter</li>
+        <li>1 1/4 cups milk</li>
+        <li>extra milk for glazing</li>
+    </ul>
+
 </body>
+
 </html>
