--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <a href="../odin-recipes/recipes/spicypork.html">Spicy Pork</a>
-            <a href=""></a>
+            <li><a href="../odin-recipes/recipes/spicypork.html">Spicy Pork</a></li>
+            <li><a href="../odin-recipes/recipes/cheesescones.html">Cheese Scones</a></li>
         </ul>
     </body>
 </html>
