recipes/cheesescones.html

--- a/recipes/cheesescones.html
+++ b/recipes/cheesescones.html
@@ -23,6 +23,15 @@
         <li>extra milk for glazing</li>
     </ul>
 
+    <h3>Method</h3>
+    <ol>
+        <li>Preheat the oven to 220°C. Grease or flour a baking tray.</li>
+        <li>Sift the flour, baking powder and salt into a bowl. Add cheese, cayenne pepper and mustard powder to the mixture. Rub in the butter with oyr fingertips until the mixture resembles fine breadcrumbs.</li>
+        <li>Add the milk and quickly mix with a round-bladed table knife to a soft dough. For light and tender scones the mixture should be quite soft and a little sticky. Scrape the dough onto the floured baking tray and flour the top.</li>
+        <li>Working quickly, pat the dough out to 2cm thickness. With a floured knife, cut it into 12 even-sized pieces, then separate the scones to allow 2cm space between them. Brush the tops with milk.</li>
+        <li>Before baking, top each scone with a little more grated cheese. Bake for 10 minutes or until golden brown. Place on a wire rack to cool, wrapped in a clear tea towel to keep them soft.</li>
+    </ol>
+
 </body>
 
 </html>
