recipes/cheesescones.html

--- a/recipes/spicypork.html
+++ b/recipes/spicypork.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Spicy Pork</h1>
-        <img src="../DaejiBulgogi500.jpg">
+        <img src="../../../Pictures/DaejiBulgogi500.jpg">
         <h2>Delicious spicy pork</h2>
         <p>Recipe great for the family</p>
 
