--- a/recipes/cheesescones.html
+++ b/recipes/cheesescones.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Cheese Scones</h1>
-    <img src="../cheesescones.jpg">
+    <img src="../../../Pictures/cheesescones.jpg">
     <h2>Family favourites</h2>
     <p>These scones are a Edmonds and kiwi staple!</p>
 
