--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="../odin-recipes/recipes/spicypork.html">Spicy Pork</a></li>
             <li><a href="../odin-recipes/recipes/cheesescones.html">Cheese Scones</a></li>
+            <li><a href="../odin-recipes/recipes/sloppyjoes.html">Sloppy Joes</a></li>
         </ul>
     </body>
 </html>
